- fixed scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ input[type=range]::-ms-thumb {
 }
 
 #details:hover {
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 #header {
